# ifx-train-data-refresh

./: Cargo.toml  Project_Status.md  README.md  Refresh-InformixDb.ps1  adjectives.txt  config.json  config.sample.yml  config.template.json  config.yml  export.sh  goal.txt  import.sh  nouns.txt  verify_export.sh
Functions/: DataSampling.ps1  DatabaseBackup.ps1  Logging.ps1  NameGeneration.ps1  Progress.ps1  TableTransfer.ps1
scripts/: remove_excluded_tables.sh  scrub_data.sh  setup-test-db.sh  test_database_setup.sh  verification_functions.sh  yaml_parser.sh
src/: error.rs  lib.rs  main.rs
src/config/: combination.rs  database.rs  export.rs  mod.rs  scrubbing.rs  verification.rs
src/processor/: copy.rs  mod.rs  random.rs  sql.rs  unl.rs
src/tests/: integration_test.rs
src/tests/common/: mod.rs
test_data/: config.yml
test_data.exp/: custo00100.unl  emplo00101.unl  load_data.sql  proje00102.unl  repos00103.unl
test_live.exp/: custo00100.unl  emplo00101.unl  proje00102.unl  repos00103.unl  test_live.sql  train00104.unl  train00105.unl
