[package]
name = "ifx-train-data-refresh"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
rand = "0.8"
regex = "1.10"
tempfile = "3.8"
rayon = "1.8"
indicatif = "0.17"
chrono = "0.4"

[dev-dependencies]
test-case = "3.1"
tempfile = "3.8"
